[waterflow] 适配测试代码